<resources>
    <string name="app_name" translatable="false">Quizz</string>
    <string name="welcome_name1">Welcome!</string>

    <string name="welcome_name2">What\'s your name?</string>

    <string name="sound_play">Sound</string>

    <string name="welcome_username">Type your name</string>
    <string name="welcome_password">Type your password</string>
    <string name="welcome_repassword">Retype your password</string>
    <string name="welcome_signup">Register</string>
    <string name="welcome_signin">Sign in</string>

    <string name="home_welcome">Welcome</string>
    <string name="home_choice">What do you want to do ?</string>

    <string name="normal_game_mode">Normal game mode</string>
    <string name="timer_game_mode">Timed game mode</string>
    <string name="scores_page">Table of scores</string>
    <string name="well_done">Well done!</string>
    <string name="your_score_is">Your score is</string>
    <string name="home_score">HOME</string>


</resources>